src/app/page.module.css
.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2rem;
}

.pfp {
  border-radius: 50%;
  margin-bottom: 1.5rem;
}

.banner {
  position: absolute;
  top: 0;
  left: 0;
  height: 3px;
  width: 100%;
  background-color: var(--yellow);
}

.firstName {
  color: var(--yellow);
  font-weight: 800;
  font-size: 2.5rem;
  margin-bottom: -0.85rem;
  letter-spacing: -0.1rem;
}

.lastName {
  font-weight: 700;
  font-size: 2.25rem;
  margin-bottom: 1rem;
}

.biLine {
  font-weight: 700;
}

.title {
  text-align: center;
}

.socials {
  border-top: 1px dotted var(--yellow);
  border-bottom: 1px dotted var(--yellow);
  padding: 1rem;
  margin: 1rem auto;
  align-items: center;
  display: flex;
  flex-direction: column;
  width: 95%;
}

.bio {
  width: 95%;
  font-size: 1.15rem;
  margin: 1rem;
  line-height: 2rem;
}

.socials a {
  margin: 0.5rem auto;
  font-weight: 700;
}

.ossSection {
  width: 95%;
  padding-top: 1rem;
  margin: 1rem auto;
  align-items: center;
  display: flex;
  flex-direction: column;
}

.ossProjects {
  margin-top: 1rem;
  align-items: center;
  display: flex;
  flex-direction: column;
}

.ossProjects a {
  align-items: center;
  display: flex;
  flex-direction: row;
  margin: 0.5rem auto;
}

.ossProjects a svg {
  width: 50px;
  padding-right: 0.5rem;
}

@media only screen and (min-width: 600px) {
  .main {
    padding: 5rem;
  }

  .bio {
    width: 50%;
  }

  .socials {
    flex-direction: row;
    width: 50%;
    justify-content: center;
  }

  .socials a {
    margin: 0 1rem;
  }

  .ossProjects {
    flex-direction: row;
  }

  .ossProjects a {
    align-items: center;
    display: flex;
    flex-direction: column;
    margin: 1rem 2rem;
  }

  .ossProjects a svg {
    width: 100px;
  }
}

